--- a/TCGA_VIF_analysis/TCGA_WXS_Analysis/TCGA_WXS_vs_RNAseq/TCGA_WXS_vs_RNAseq.Rmd
+++ b/TCGA_VIF_analysis/TCGA_WXS_Analysis/TCGA_WXS_vs_RNAseq/TCGA_WXS_vs_RNAseq.Rmd
@@ -14,7 +14,7 @@ library(tidyverse)
 ```{r}
 
 WXS_insertions = read.table("../insertions.tsv", header=T, sep="\t", stringsAsFactors = F)
-RNA_insertions = read.table("../../insertions.tsv", header=T, sep="\t", stringsAsFactors = F) %>% filter(TCGA %in% c('CESC', 'HNSC', 'LIHC'))
+RNA_insertions = read.table("../../insertions.tsv", header=T, sep="\t", stringsAsFactors = F) %>% filter(TCGA %in% c('CESC', 'HNSC', 'LIHC', 'STAD', 'UCEC'))
 
 ```
 
@@ -138,6 +138,23 @@ both_virus_content %>% select(virus, mapped_rpm.wxs, mapped_rpm.rna) %>%
   
 
 ```
+
+
+```{r}
+
+# include violin plot that compares by virus
+
+
+
+
+
+```
+
+
+
+
+
+
 
 
 ```{r}
