--- a/Combined_VIF_analysis/Combine_Virus_Content_Data.Rmd
+++ b/Combined_VIF_analysis/Combine_Virus_Content_Data.Rmd
@@ -159,5 +159,22 @@ combined_all_virus_content = bind_rows(TCGA_combined_virus_content,
 
 ```
 
+```{r}
+
+combined_all_virus_content$tissue = str_replace_all(combined_all_virus_content$tissue, " ", "_")
+
+
+```
+
+
+
+```{r}
+
+write.table(combined_all_virus_content, file="virus_content_unfiltered.tsv", sep="\t", quote=F, row.names=F)
+```
+
+
+
+
 
 
