--- a/NatGenetics2015_reanalysis/NatGenetics2015_VIF/NatGen2015_virus_content_and_insertions_analysis.Rmd
+++ b/NatGenetics2015_reanalysis/NatGenetics2015_VIF/NatGen2015_virus_content_and_insertions_analysis.Rmd
@@ -67,7 +67,7 @@ read_align_stats
 samples_info_w_align_stats = full_join(samples_info, read_align_stats, by='sample_name')
 
 # verify our downloaded read counts match expectations
- %>% filter(sra_num_reads != sample_read_count)
+samples_info_w_align_stats %>% filter(sra_num_reads != sample_read_count)
 
 ```
 
