--- a/Combined_VIF_analysis/Combine_Virus_Content_Data.Rmd
+++ b/Combined_VIF_analysis/Combine_Virus_Content_Data.Rmd
@@ -238,7 +238,7 @@ nrow(combined_all_virus_content)
 
 combined_all_virus_content = combined_all_virus_content %>%
   mutate(sample_id = sample_name) %>%
-  mutate(sample_name = paste(participant, tumor_or_normal, sep="^"))
+  mutate(sample_name = paste(participant, project, tumor_or_normal, sep="^"))
   
 
 ```
